SC-3520 fix RTL merge duplicate view name alignment

--- a/sugarcrm/styleguide/less/sugar-specific/rtl.less
+++ b/sugarcrm/styleguide/less/sugar-specific/rtl.less
@@ -131,6 +131,10 @@ html.rtl {
         right: 61px;
     }
 
+    h4.merge-interface-header {
+      text-indent: 14px;
+    }
+
     h4.merge-interface-header button {
         left: -20px;
         position: relative;
